# jd-invoice-tool

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/api/: client.rs  jd.rs  mod.rs
src-tauri/src/commands/: browser.rs  cookie.rs  download.rs  exchange.rs  invoice.rs  login_window.rs  mod.rs  title.rs
src-tauri/src/utils/: file.rs
src/api/: index.ts
src/components/: CookieInput.vue  ExchangeConfirmDialog.vue  HeaderBar.vue  InvoiceCard.vue  InvoiceGroupCard.vue  InvoiceGroupTable.vue  LoadingOverlay.vue  TitleManager.vue
src/router/: index.ts
src/stores/: app.ts
src/types/: index.ts  title.ts
src/utils/: mergeOrder.ts
src/views/: ExchangeView.vue  InvoiceListView.vue  LoginView.vue  SettingsView.vue
